<resources>
    <string name="app_name">FruitApp</string>
    <string name="passionfruit">
        Passion fruit is one fruit where the seeds are eaten, and the skin
        is discarded.
        Purple passion fruit is native to Argentina, Brazil and Paraguay
        while yellow passion fruit are native to the Amazon basin</string>
    <string name="apple">
        Everyone knows that apple pie is often associated with being American, but this delicious dessert is actually European.
        The very first recipe for apple pie came from England hundreds of years ago. In addition, the vast majority of apple varieties are not even native to North America.
    </string>
    <string name="avocado">
        There are 10 grams of fiber in one medium-sized avocado. There are two grams of fiber in one serving, which is one-fifth of a medium avocado. It contains both insoluble and soluble fiber.
        Insoluble fiber (which speeds up the passage of foods) accounts for 75%, with the remaining 25% as soluble fiber (the fiber that makes you feel full).
    </string>
    <string name="banana">
       Bananas are sterile; you can’t sow seeds and grow them. Bananas are grown by cutting a piece from another plant, sort of cloning.
        Which means the banana you are eating today is genetically the same as the banana your grandfather ate.
    </string>
    <string name="coconut">
       Coconut oils contain MCT’s, a medium-chain triglycerides which are easy to digest. The oil is a source of energy and has an accelerating effect on metabolism. Coconut oils are very healthy and good for your heart.
    </string>
    <string name="cherry">
      Despite what we learned in poems as kids, there is no factual evidence that our first president chopped down any of these fruit-bearing trees. The myth was created by Parson Mason Weems, who wrote the story in a biography of President Washington to illustrate his integrity and honesty.
    </string>
    <string name="dragonfruit">
    The natural pigments of Dragon Fruit flesh can be used as dye or as ingredients in cosmetics. The night-blooming fruit is in season throughout the summer, with August and September being their peak months.
    </string>
    <string name="durian">
    Durian contains protein, thiamine, manganese, potassium, riboflavin, copper, magnesium, folate and niacin. It is also rich in healthy plant compounds including anthocyanins, carotenoids, polyphenols and flavonoids. All of these function as antioxidants. Durian reduces cancer risk due to its antioxidant content, prevents heart disease, fights infection and lowers blood sugar due to its lower glycemic index.
    </string>
    <string name="grape">
    Grapes grow on vines that can produce up to 20 pounds of fruit each year. Unlike most plants, grapes can tolerate cold winters. 97% of grapes sold in the U.S. are grown in California. Grapes are good sources of vitamin C and fiber.
    </string>
    <string name="guava">
    Guavas contain vitamin C, phosphorous, iron and calcium. They are often referred to as “super fruits” because of their high vitamin content. Guava leaves are sometimes used in hair products because they are believed to prevent hair loss and encourage hair growth.
    </string>
    <string name="kiwi">
    In 1962, farmers in New Zealand began calling the fruit "kiwi" because of the resemblance of the fruit to the kiwi bird, which has a round body with brown feathers. The name "kiwi" began to be used for export marketing and eventually the name was adopted commercially in 1974.
    </string>
    <string name="limd">
    The use of citrus from lime was initially a closely guarded military secret, as scurvy was a common scourge of various national navies, and the ability to remain at sea for lengthy periods without contracting the disorder was a huge benefit for the military.
    </string>
    <string name="longan">
    Refrigerated longans taste very refreshing. Longans are well recognized as a premier tropical fruit in Thailand and China. The Chinese nicknamed the longan Dragons Eye because of its white oval eye-like shape where the pit looks similar to an eyes pupil.
    </string>
    <string name="lychee">
    Lychee is quite low in calories, 100 grams contains only 66 calories. It contains no saturated fats or cholesterol and is rich in dietary fiber, thus making it an ideal option for those who are trying to shed some pounds.
    </string>
    <string name="mango">
    India is the top producer of mangoes in the world. Vitamin C and A are important antioxidants. Green mangoes have more vitamin C than ripe mangoes however as mangoes ripen, they contain more vitamin A.
    </string>
    <string name="mangosteen">
    The mangosteen fruit is highly valued for its juicy, delicate texture and slightly astringent flavour and is commonly eaten fresh, canned, or dried. The plant is used locally in traditional medicine and has been promoted as an alternative cancer treatment, but clinical studies in humans are lacking
    </string>
    <string name="orange">
    In terms of the history of colours, it’s only recently that the colour orange got its own name. Surprisingly, the fruit came first, originating in China, and the English word ‘orange’ to describe the colour, followed thereafter.
    </string>
    <string name="papaya">
    When used topically, mashed papaya appears to be beneficial for promoting wound healing and preventing infection of burned areas. Researchers believe that the proteolytic enzymes chymopapain and papain in papaya are responsible for their beneficial effects.
    </string>
    <string name="pineapple">
    Pineapples are a good source of vitamin C, potassium and fiber. Pineapples contain an enzyme, called bromelain, that can be used as a meat tenderizer. The name pineapple in English came from “pina” in Spanish because it looks similar to a pinecone.
    </string>
    <string name="pomelo">
    Pomelos are an excellent source of vitamin C, an antioxidant that strengthens the immune system, reduces inflammation, and protects the body against free radicals. The fruits are also a good source of copper to maintain a healthy nervous system, potassium to balance fluid levels within the body, and provide lower amounts of phosphorus, fiber, and calcium.
    </string>
    <string name="nav_fruit">Fruit classification</string>
    <string name="nav_learn">Learning</string>
    <string name="nav_game">Game</string>
    <string name="nav_blog">Blog</string>
    <string name="nav_logout">Logout</string>
    <string name="cf">Choose Fruit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_register">Register</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="pasd">
    Passion fruit is known in English as passion fruit because it is one of many passion flowers, the English translation of the Latin genus nomenclature, Passiflora, and can be spelled passion fruit, passionfruitmor passion-fruit. Around 1700, the name was given by missionaries in Brazil as an educational aid while trying to convert the indigenous population to Christianity; The fruits name is flor das cinco chagas or flower of the five wounds to illustrate Christs crucifixion and His resurrection, with other plant parts also named after a symbol from the Passion. of Jesus.
    </string>
</resources>